refactor(dream_sakura): 重构配置文件并优化代码
- 重构 Config 类，添加 Dream Finale 技能冷却时间配置
- 更新 launch.json 文件，增加 JVM 参数
- 修改 AnimatedBlock 类，使用 RegistryBlockEntity 创建 BlockEntity
- 增加WeaponItem类, 用于创建武器