@@ -96,6 +96,11 @@ minecraft {
         client {
             // 要加载 gametest 的命名空间列表，用逗号分隔。空 = 所有命名空间。
             property 'forge.enabledGameTestNamespaces', mod_id
+
+            jvmArg '-XX:+IgnoreUnrecognizedVMOptions'
+            jvmArg '--add-opens=java.base/java.lang=ALL-UNNAMED'
+            jvmArg '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
+            jvmArg '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
         }
 
         server {
